<resources>
    <!--    /**-->
    <!--    * Giang Nguyen-->
    <!--    * Student# 301033256-->
    <!--    * COMP304 002-->
    <!--    * Professor: Haki Sharifi-->
    <!--    * */-->
    <string name="app_name" translatable="false">GiangLab4</string>
    <string name="add_patient">Add Patient</string>
    <string name="add_test">Add Test</string>
    <string name="search_patient_id">Search by Patient ID</string>
    <string name="department_filter">Filter by Department</string>
    <string name="add_info">Add Information</string>
    <string name="search_filter">Search and Filter</string>
    <string-array name="departments">
        <item>Audiology</item>
        <item>Biochemical Genetics</item>
        <item>Cardiology</item>
        <item>Medicine</item>
    </string-array>
    <string name="select_department">Select Department</string>
    <string name="select_patient">Select Patient</string>
    <string name="new_test">New Test</string>
    <string name="new_patient">New Patient</string>
    <string name="all_patients">View All Patients</string>
    <string name="my_patients">My Patients</string>
    <string name="first_name_label">First Name</string>
    <string name="first_name_hint">Enter first name</string>
    <string name="last_name_label">Last Name</string>
    <string name="last_name_hint">Enter last name</string>
    <string name="department_label">Select Department</string>
    <string name="blood_pressure_negative">Negative</string>
    <string name="blood_pressure_positive">Positive</string>
    <string name="blood_pressure_label">Blood Pressure</string>
    <string name="cholesterol_label">Respiratory Rate</string>
    <string name="temperature_label">Blood Oxygen Level</string>
    <string name="test_date_label">Test Date</string>
    <string name="patient_search_id_hint">Enter patient ID</string>
    <string name="gender_label">Select Gender</string>
    <string name="gender_opt_male">Male</string>
    <string name="gender_opt_female">Female</string>
    <string name="covid_label" translatable="false">Covid-19</string>
    <string name="heart_beat_rate_label">Heart Beat Rate</string>

</resources>