<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/light_dark_green"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/giangFirstNameLabel"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/first_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/giangFirstNameInput"
        android:textSize="@dimen/mediun_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/giangFirstNameLabel"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/giangLastNameInput"
        android:textSize="@dimen/mediun_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/giangLastNameLabel"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/giangLastNameLabel"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="124dp"
        android:text="@string/last_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/giangDepartmentLabel"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="324dp"
        android:text="@string/department_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/giangDepartmentSpinner"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_width="407dp"
        android:layout_height="53dp"
        android:background="@android:color/transparent"
        android:entries="@array/departments"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/giangDepartmentLabel" />

    <Button
        android:id="@+id/giangAddPatientBtn"
        style="@style/btn_primary"
        android:layout_width="376dp"
        android:layout_height="49dp"
        android:layout_marginBottom="28dp"
        android:text="@string/add_patient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/giangGenderRadioGroup"
        android:layout_width="384dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/giangGenderLabel">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:text="@string/gender_opt_male" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_opt_female" />
    </RadioGroup>

    <TextView
        android:id="@+id/giangGenderLabel"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="224dp"
        android:text="@string/gender_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>