<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/lightBlue"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/giangSelectPatientLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/input_label"
            android:text="@string/select_patient" />
        <Spinner
            android:id="@+id/giangSelectPatientDropdown"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="407dp"
            android:layout_height="53dp"

            android:background="@android:color/transparent"
            android:entries="@array/departments"
            android:spinnerMode="dropdown" />

        <View
            android:id="@+id/divider"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/giangBloodPressureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/input_label"
            android:text="@string/blood_pressure_label" />

        <RadioGroup
            android:id="@+id/giangBloodPressureRadio"
            android:layout_width="361dp"
            android:layout_height="33dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:text="@string/blood_pressure_positive" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="227dp"
                android:layout_height="match_parent"
                android:text="@string/blood_pressure_negative" />
        </RadioGroup>

        <View
            android:id="@+id/divider2"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" />

        <TextView
            style="@style/input_label"
            android:id="@+id/giangCovidLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/covid_label" />

        <RadioGroup
            android:id="@+id/giangCovidRadio"
            android:layout_width="368dp"
            android:layout_height="34dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:text="@string/blood_pressure_positive" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:text="@string/blood_pressure_negative" />
        </RadioGroup>

        <View
            android:id="@+id/divider3"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" />

        <TextView
            style="@style/input_label"
            android:id="@+id/giangCholesterolLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cholesterol_label" />

        <EditText
            android:id="@+id/giangCholesterolInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            style="@style/input_label"
            android:id="@+id/giangTemperatureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_label" />

        <EditText
            android:id="@+id/giangTemperatureInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            style="@style/input_label"
            android:id="@+id/giangHeartBeatRateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heart_beat_rate_label" />

        <EditText
            android:id="@+id/giangHeartBeatRate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            style="@style/input_label"
            android:id="@+id/giangTestDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_date_label" />

        <EditText
            android:id="@+id/giangTestDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="date" />

        <Button
            style="@style/btn_primary"
            android:id="@+id/giangAddTestBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:text="@string/add_test" />
    </LinearLayout>
</ScrollView>
